force-app/main/default/objects/customer_information__e/customer_information__e.object-meta.xml
<CustomObject>
    <label>customer information</label>
    <pluralLabel>customer information</pluralLabel>
</CustomObject>