force-app/main/default/objects/customer_information__e/fields/Customer_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Last_Name__c</fullName>
    <label>Customer Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>