force-app/main/default/objects/customer_information__e/fields/Phone_No__c.field-meta.xml
<CustomField>
    <fullName>Phone_No__c</fullName>
    <label>Phone No</label>
    <length>10</length>
    <type>Text</type>
</CustomField>